--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
       <ul class="social-media__list">
         <li class="social-media__item social-media__item--facebook">
-          <a href="https://www.facebook.com/"
+          <a aria-label="Facebook" href="https://www.facebook.com/"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
               width="20"
@@ -110,7 +110,7 @@
           ></a>
         </li>
         <li class="social-media__item social-media__item--twitter">
-          <a href="https://twitter.com/"
+          <a aria-label="Twitter" href="https://twitter.com/"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
               width="20"
@@ -124,7 +124,7 @@
           ></a>
         </li>
         <li class="social-media__item social-media__item--instagram">
-          <a href="https://www.instagram.com/"
+          <a aria-label="Instagram" href="https://www.instagram.com/"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
               width="20"
